install gh and add homepage url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "personal_page",
   "version": "0.1.0",
+  "homepage": "https://leyicao.github.io/personal_page",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
